force-app/main/default/objects/rstk__icitem__c/fields/fmg_bom_costs__c.field-meta.xml
<CustomField>
    <fullName>fmg_bom_costs__c</fullName>
    <description>Bill of Materials</description>
    <label>BOM Costs</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>