force-app/main/default/objects/rstk__icitem__c/fields/FMG_Item_Image__c.field-meta.xml
<CustomField>
    <fullName>FMG_Item_Image__c</fullName>
    <formula>IMAGE( rstk__icitem_imageurl__c , &quot;Item Image&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Image</label>
    <type>Text</type>
</CustomField>