force-app/main/default/objects/rstk__icitem__c/fields/fmg_landed_costs__c.field-meta.xml
<CustomField>
    <fullName>fmg_landed_costs__c</fullName>
    <label>Landed Costs</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>