force-app/main/default/objects/rstk__icitem__c/fields/fmg_last_price_paid__c.field-meta.xml
<CustomField>
    <fullName>fmg_last_price_paid__c</fullName>
    <label>Last Price Paid</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>