force-app/main/default/objects/rstk__icitem__c/fields/fmg_manufacture_parent_child_link__c.field-meta.xml
<CustomField>
    <fullName>fmg_manufacture_parent_child_link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a link between a manufactured item and the LIFO Purchased Item</description>
    <label>FMG Manufacture Parent Child Link</label>
    <referenceTo>rstk__icitem__c</referenceTo>
    <relationshipLabel>Inventory Item Master (FMG Manufacture Parent Child Link)</relationshipLabel>
    <relationshipName>fmg_manufacture_parent_child_link</relationshipName>
    <type>Lookup</type>
</CustomField>