force-app/main/default/objects/rstk__icitem__c/fields/FMG_Pct_of_SS_OH__c.field-meta.xml
<CustomField>
    <fullName>FMG_Pct_of_SS_OH__c</fullName>
    <formula>IF(rstk__icitem_sspolqty__c = 0,0,FMG_On_Hand_Qty__c /  rstk__icitem_sspolqty__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% of SS OH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>