force-app/main/default/objects/rstk__icitem__c/fields/Item_Number_Formula__c.field-meta.xml
<CustomField>
    <fullName>Item_Number_Formula__c</fullName>
    <formula>rstk__icitem_item__r.rstk__peitem_item__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Number Formula</label>
    <type>Text</type>
</CustomField>