force-app/main/default/objects/rstk__icitem__c/fields/WO_Notes__c.field-meta.xml
<CustomField>
    <fullName>WO_Notes__c</fullName>
    <description>Add the packaging notes for manufactured items Work Orders.</description>
    <label>WO Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>